@@ -2,16 +2,17 @@ package com.xxl.conf.core.test.openapi.confdata;
 
 import com.xxl.conf.core.constant.Consts;
 import com.xxl.conf.core.openapi.confdata.ConfDataService;
-import com.xxl.conf.core.openapi.confdata.model.ConfDataInfo;
-import com.xxl.conf.core.openapi.confdata.model.ConfDataRequest;
+import com.xxl.conf.core.openapi.confdata.model.*;
 import com.xxl.tool.core.MapTool;
 import com.xxl.tool.http.HttpTool;
+import com.xxl.tool.json.GsonTool;
 import com.xxl.tool.response.Response;
 import org.junit.jupiter.api.Test;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class ConfDataOpenApiTest {
     private static final Logger logger = LoggerFactory.getLogger(ConfDataOpenApiTest.class);
@@ -33,41 +34,52 @@ public class ConfDataOpenApiTest {
         String finalUrl = adminAddress + "/openapi/confdata";
         return HttpTool.createClient()
                 .url(finalUrl)
-                .timeout(30 * 1000)
+                .timeout(60 * 1000)
                 .header(Consts.XXL_CONF_ACCESS_TOKEN, accessToken)
                 .proxy(ConfDataService.class);
     }
 
     @Test
-    public void query() {
+    public void queryKey() {
         // param
-        ConfDataRequest request = new ConfDataRequest();
+        QueryKeyRequest request = new QueryKeyRequest();
         request.setEnv("test");
-        request.setConfKey(MapTool.newMap(
-                "xxl-conf-sample", Arrays.asList("sample.key01", "sample.key02", "sample.key22")
-        ));
-        request.setSimpleQuery(false);
+        request.setAppnameList(Arrays.asList("xxl-conf-sample", "xxl-conf-admin02"));
         logger.info("request:{}", request);
 
         // invoke
-        Response<ConfDataInfo> response = getClient().query(request);
-        logger.info("result:{}, response:{}", response.isSuccess()?"success":"fail", response);
+        Response<QueryKeyResponse> response = getClient().queryKey(request);
+        logger.info("response:{}", GsonTool.toJsonPretty(response));
     }
 
     @Test
-    public void monitor() {
+    public void queryData() {
         // param
-        ConfDataRequest request = new ConfDataRequest();
+        QueryDataRequest request = new QueryDataRequest();
         request.setEnv("test");
-        request.setConfKey(MapTool.newMap(
-                "xxl-conf-sample", Arrays.asList("sample.key01", "sample.key02", "sample.key22")
+        request.setAppnameKeyData(MapTool.newMap(
+                "xxl-conf-sample", List.of("sample.key01", "sample.key02", "sample.key03", "key04"),
+                "xxl-conf-sample02", List.of("key01", "key02")
         ));
         request.setSimpleQuery(true);
         logger.info("request:{}", request);
 
         // invoke
+        Response<QueryDataResponse> response = getClient().queryData(request);
+        logger.info("response:{}", GsonTool.toJsonPretty(response));
+    }
+
+    @Test
+    public void monitor() {
+        // param
+        MonitorRequest request = new MonitorRequest();
+        request.setEnv("test");
+        request.setAppnameList(Arrays.asList("xxl-conf-sample", "xxl-conf-admin02"));
+        logger.info("request:{}", request);
+
+        // invoke
         Response<String> response = getMonitorClient().monitor(request);
-        logger.info("result:{}, response:{}", response.isSuccess()?"success":"fail", response);
+        logger.info("response:{}", GsonTool.toJsonPretty(response));
     }
 
 }
